[package]
name = "rpi-led-panel"
version = "0.2.0"
edition = "2021"
license = "GPL-2.0"
authors = ["Sven Niederberger <s-niederberger@outlook.com>"]
description = "Control LED matrices with a Raspberry Pi."
repository = "https://github.com/EmbersArc/rpi_led_panel"
homepage = "https://github.com/EmbersArc/rpi_led_panel"
readme = "README.md"
keywords = ["led", "matrix", "raspberry", "pi", "rgb"]

[[example]]
name = "image"
required-features = ["drawing"]

[[example]]
name = "drawing"
required-features = ["drawing"]

[[example]]
name = "rotating_square"
required-features = ["drawing"]

[features]
default = ["drawing"]
drawing = ["embedded-graphics"]

[dependencies]
argh = "0.1.9"
memmap2 = "0.5.7"
embedded-graphics = { version = "0.7.1", optional = true }
thread-priority = "0.10.0"
libc = "0.2.137"
