[package]
name = "rpi-led-panel"
version = "0.4.0"
edition = "2021"
license = "GPL-2.0"
authors = ["Sven Niederberger <s-niederberger@outlook.com>"]
description = "Control LED matrices with a Raspberry Pi."
repository = "https://github.com/EmbersArc/rpi_led_panel"
homepage = "https://github.com/EmbersArc/rpi_led_panel"
readme = "README.md"
keywords = ["led", "matrix", "raspberry", "pi", "rgb"]

[[example]]
name = "image"
required-features = ["drawing"]

[[example]]
name = "drawing"
required-features = ["drawing"]

[[example]]
name = "rotating_square"

[features]
default = ["drawing"]
drawing = ["embedded-graphics"]

[dependencies]
argh = "0.1.10"
memmap2 = "0.7.0"
embedded-graphics = { version = "0.8.0", optional = true }
thread-priority = "0.13.1"
libc = "0.2.146"
