[package]
name = "rpi-led-panel"
version = "0.7.0"
edition = "2024"
license = "GPL-2.0"
authors = ["Sven Niederberger <s-niederberger@outlook.com>"]
description = "Control LED matrices with a Raspberry Pi."
repository = "https://github.com/EmbersArc/rpi_led_panel"
homepage = "https://github.com/EmbersArc/rpi_led_panel"
readme = "README.md"
keywords = ["led", "matrix", "raspberry", "pi", "rgb"]

[[example]]
name = "image"
required-features = ["drawing"]

[[example]]
name = "drawing"
required-features = ["drawing"]

[[example]]
name = "rotating_square"

[features]
default = ["drawing"]
drawing = ["embedded-graphics"]

[dependencies]
argh = "0.1.13"
memmap2 = "0.9.9"
embedded-graphics = { version = "0.8.1", optional = true }
thread-priority = "3.0.0"
libc = "0.2.177"
strum = { version = "0.27.2", features = ["derive"] }
